--- a/src/AspNetCore/appsettings.json
+++ b/src/AspNetCore/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"ConnectionStrings": {
+		"SampleDB": "Server=localhost;Port=5432;Database=Sampledb;User Id=developer;Password=123;"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
